--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				</article>
 			</section>
 
-            <div class="pb"/>
+<!--             <div class="pb"/> -->
 
 			<!-- Technical Skills -->
 			<section class="cv-section">
