--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 
 			<!-- summary -->
 			<section class="cv-section">
-				<h3 class="text-uppercase">// Profile Summary</h2>
+				<h3 class="text-uppercase">Profile Summary</h2>
 				<hr />
 				<ul>
 					<li><p>Software Developer with 6 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
@@ -65,7 +65,7 @@
 
 			<!-- Education -->
 			<section class="cv-section">
-				<h3 class="text-uppercase">// Education</h3>
+				<h3 class="text-uppercase">Education</h3>
 				<hr/>
 				<article>
 				  <p><strong>BEng(Hons) Artificial Intelligence and Software Engineering, </strong>2008-2012</small></p>
@@ -73,11 +73,11 @@
 				</article>
 			</section>
 
-<!--             <div class="pb"/> -->
+                        <div class="pb"/>
 
 			<!-- Technical Skills -->
 			<section class="cv-section">
-				<h3 class="text-uppercase">// Technical Skills</h3>
+				<h3 class="text-uppercase">Technical Skills</h3>
 				<hr/>
 				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Node.js, Python, Bash, PowerShell, HTML, CSS, SQL</p>
 				<p><strong><span class="tech-skill">Technologies: </span></strong>Spring Core, Java Servlet API, JSP, JAXB, JDBC, Hibernate, Tomcat, JUnit, jQuery, Google Web Toolkit, Wicket, Bootstrap, JSON, XML, Maven</p>
@@ -91,7 +91,7 @@
 			<!-- experiences -->
 			<section class="cv-section">
 
-				<h3 class="text-uppercase">// Experience</h3>
+				<h3 class="text-uppercase">Experience</h3>
 				<hr />
 
 				<article>
@@ -181,7 +181,7 @@
 		  <!-- Additional Info -->
 		  <section class="cv-section">
 
-            <h3 class="text-uppercase">// Additional Information</h3>
+            <h3 class="text-uppercase">Additional Information</h3>
 			<hr />
 
             <article>
