Added new work experiance

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
       <header class="text-center cv-header">
         <h2 class="text-uppercase">Robert Koprowski</h2>
 		<!--<p><strong>Address:</strong> Lipinskiego 1/39, Cracow 30-349, Poland</p>-->
-		<p><strong>E-mail:</strong> koprowskirobert@gmail.com</p>
+		<p><strong>E-mail:</strong> robert[at]koprowski.io</p>
 		<p><strong>Tel. no.:</strong> +48 509 088 645 <strong>Skype ID:</strong> koprowski.robert</p>
         <p>
             <a href="https://github.com/mr-robek" target="_blank" class="d-print-block">
@@ -53,12 +53,12 @@
 				<h3 class="text-uppercase">Profile Summary</h2>
 				<hr />
 				<ul>
-					<li><p>Software Developer with 6 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
+					<li><p>Software Developer with 8 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
 					<li><p>Deep knowledge of Java programming language and Java frameworks like Spring Core, Google Web Toolkit or Wicket.</p></li>
-					<li><p>4 years of full time experiance of JavaScript programming which includes ES6, Node.js, jQuery, ReactJS</p></li>
+					<li><p>4 years of full time experiance of JavaScript programming which includes ES6, firebase-functions, Node.js, jQuery, ReactJS</p></li>
 					<li><p>Familiar with Object Oriented Programming concept and Design Patterns used in development process. Huge fan of agile methodologies like Scrum and Kanban.</p></li>
-					<li><p>Developing under Linux and Windows environments. Competent in Bash, Powershell and Python scripting.</p></li>
-					<li><p>Experienced with relational databases such as PostgresSQL, Oracle, HSQLDB.</p></li>
+					<li><p>Developing under Linux, Mac and Windows environments. Competent in Bash, Powershell and Python scripting.</p></li>
+					<li><p>Experienced with relational databases such as PostgresSQL, Oracle, HSQLDB and non-relational such as Redis, Cloud Firestore, Firebase Realtime Database.</p></li>
 					<li><p>Ambitious, fast learner with passion for new technologies.</p></li>
 				</ul>
 			</section>
@@ -80,12 +80,12 @@
 				<h3 class="text-uppercase">Technical Skills</h3>
 				<hr/>
 				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Node.js, Python, Bash, PowerShell, HTML, CSS, SQL</p>
-				<p><strong><span class="tech-skill">Technologies: </span></strong>Spring Core, Java Servlet API, JSP, JAXB, JDBC, Hibernate, Tomcat, JUnit, jQuery, Google Web Toolkit, Wicket, Bootstrap, JSON, XML, Maven</p>
+				<p><strong><span class="tech-skill">Technologies: </span></strong>Firebase Functions, Spring Core, Java Servlet API, JSP, JAXB, JDBC, Hibernate, Tomcat, JUnit, jQuery, Google Web Toolkit, Wicket, Bootstrap, JSON, XML, Maven</p>
 				<p><strong><span class="tech-skill">Concepts: </span></strong>Object-Oriented Programming, Design Patterns, Agile Methodologies(Scrum, Kanban), UML, RESTful Applications</p>
-				<p><strong><span class="tech-skill">Databases: </span></strong>Oracle, PostgresSQL, HSQLDB</p>
-				<p><strong><span class="tech-skill">Operating Systems: </span></strong>Linux, Windows</p>
+				<p><strong><span class="tech-skill">Databases: </span></strong>Oracle, PostgresSQL, HSQLDB, Redis, Cloud Firestore, Firebase Realtime Database</p>
+				<p><strong><span class="tech-skill">Operating Systems: </span></strong>Linux, Mac, Windows</p>
 				<p><strong><span class="tech-skill">Version Control Systems: </span></strong>GIT, BitBucket, SVN, IBM ClearCase</p>
-				<p><strong><span class="tech-skill">Tools: </span></strong>JIRA, Jenkins, Eclipse, InteliJ</p>
+				<p><strong><span class="tech-skill">Tools: </span></strong>JIRA, TeamCity, Jenkins, WebStorm, InteliJ</p>
 			</section>
 
 			<!-- experiences -->
@@ -93,12 +93,24 @@
 
 				<h3 class="text-uppercase">Experience</h3>
 				<hr />
+				<article>
 
+					<h4>Schibsted Tech Polska</h4>
+					<p>
+						<small class="text-primary"><strong>Backend Developer,</strong> October 2019 - Now</small>
+					</p>
+					<p>Schibsted Tech Polska develops high quality software for news media, fin-tech and marketplaces industries.</p>
+
+					<p><strong>Technology Used: </strong>JavaScript, Node.js, firebase-functions, Cloud Firestore, Firebase Realtime Database, Redis, Bash, JSON, Git, GitHub, TeamCity, Pivotal Tracker</p>
+				</article>
+
+				<br />
+				
 				<article>
 
 					<h4>PBSC Urban Solutions</h4>
 					<p>
-						<small class="text-primary"><strong>Full Stack Developer,</strong> November 2016 - Now </small>
+						<small class="text-primary"><strong>Full Stack Developer,</strong> November 2016 - July 2019</small>
 					</p>
 					<p>PBSC Urban Solutions is a corporation based in Montreal (Longueuil), that operates bicycle sharing systems in Canada, United States, Mexico, United Kingdom and Australia.</p>
 
@@ -217,7 +229,7 @@
   <!-- footer signature -->
   <footer class="text-center cv-footer hidden-print">
     <p>
-      Robert Koprowski©2018 Software Engineer
+      Robert Koprowski©2020 Software Engineer
     </p>
   </footer>
 
