Updated Technical Skills

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 				<ul>
 					<li><p>Software Developer with 8 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
 					<li><p>Deep knowledge of Java programming language and Java frameworks like Spring Core, Google Web Toolkit or Wicket.</p></li>
-					<li><p>4 years of full time experiance of JavaScript programming which includes ES6, firebase-functions, Node.js, jQuery, ReactJS</p></li>
+					<li><p>5 years of full time experiance of JavaScript programming which includes ES6, firebase-functions, Node.js, jQuery, ReactJS</p></li>
 					<li><p>Familiar with Object Oriented Programming concept and Design Patterns used in development process. Huge fan of agile methodologies like Scrum and Kanban.</p></li>
 					<li><p>Developing under Linux, Mac and Windows environments. Competent in Bash, Powershell and Python scripting.</p></li>
 					<li><p>Experienced with relational databases such as PostgresSQL, Oracle, HSQLDB and non-relational such as Redis, Cloud Firestore, Firebase Realtime Database.</p></li>
@@ -79,12 +79,12 @@
 			<section class="cv-section">
 				<h3 class="text-uppercase">Technical Skills</h3>
 				<hr/>
-				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Node.js, Python, Bash, PowerShell, HTML, CSS, SQL</p>
-				<p><strong><span class="tech-skill">Technologies: </span></strong>Firebase Functions, Spring Core, Java Servlet API, JSP, JAXB, JDBC, Hibernate, Tomcat, JUnit, jQuery, Google Web Toolkit, Wicket, Bootstrap, JSON, XML, Maven</p>
-				<p><strong><span class="tech-skill">Concepts: </span></strong>Object-Oriented Programming, Design Patterns, Agile Methodologies(Scrum, Kanban), UML, RESTful Applications</p>
-				<p><strong><span class="tech-skill">Databases: </span></strong>Oracle, PostgresSQL, HSQLDB, Redis, Cloud Firestore, Firebase Realtime Database</p>
+				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Python, Bash, HTML, CSS, SQL</p>
+				<p><strong><span class="tech-skill">Technologies: </span></strong>NodeJS, Firebase Functions, Express.js, Mocha, Chai, jQuery, Spring Core, Hibernate, JUnit, GWT</p>
+				<p><strong><span class="tech-skill">Concepts: </span></strong>Object-Oriented Programming, Design Patterns, Agile Methodologies(Scrum, Kanban), RESTful Applications</p>
+				<p><strong><span class="tech-skill">Databases: </span></strong>Redis, Cloud Firestore, Firebase Realtime Database, Oracle, PostgresSQL, HSQLDB</p>
 				<p><strong><span class="tech-skill">Operating Systems: </span></strong>Linux, Mac, Windows</p>
-				<p><strong><span class="tech-skill">Version Control Systems: </span></strong>GIT, BitBucket, SVN, IBM ClearCase</p>
+				<p><strong><span class="tech-skill">Version Control Systems: </span></strong>Git, Github, BitBucket, SVN, IBM ClearCase</p>
 				<p><strong><span class="tech-skill">Tools: </span></strong>JIRA, TeamCity, Jenkins, WebStorm, InteliJ</p>
 			</section>
 
