--- a/index.html
+++ b/index.html
@@ -100,7 +100,15 @@
 						<small class="text-primary"><strong>Backend Developer,</strong> October 2019 - Now</small>
 					</p>
 					<p>Schibsted Tech Polska develops high quality software for news media, fin-tech and marketplaces industries.</p>
-
+					<p><strong>Responsibilities</strong></p>
+					<ul>
+						<li>Maintaining and developing backend of the mobile application handling over 30k active users monthly.</li>
+						<li>Improving data structure of the firebase NoSQL document database.</li>
+						<li>Collaborate with mobile apps developers to find most optimal solutions that deliver new features and bug fixes on time.</li>
+						<li>Maintaining in-house administration tool used by Customer Service team.</li>
+						<li>Supporting Customer Service team, solving backend related, non-trivial user inquiries.</li>
+						<li>Writing automated backend tests and working close with QA team to ensure that all work is tested.</li>
+					</ul>
 					<p><strong>Technology Used: </strong>JavaScript, Node.js, firebase-functions, Cloud Firestore, Firebase Realtime Database, Redis, Bash, JSON, Git, GitHub, TeamCity, Pivotal Tracker</p>
 				</article>
 
