--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				</article>
 			</section>
 
-                        <div class="pb"/>
+			<div class="pb"></div>
 
 			<!-- Technical Skills -->
 			<section class="cv-section">
@@ -134,7 +134,7 @@
 				</article>
 
 				<br />
-                <div class="pb"/>
+				<div class="pb"></div>
 				<article>
 
 					<h4>Motorola Solutions Systems Polska Sp. z o.o.</h4>
@@ -167,7 +167,7 @@
 				</article>
 
 				<br class="hidden-print"/>
-                <div class="pb"/>
+				<div class="pb"></div>
 				<article>
 					<h4>SmallGIS Sp. z o.o.</h4>
 					<p>
