--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 
 			<!-- Technical Skills -->
 			<section class="cv-section">
-				<h3 class="text-uppercase">Technical Skills</h3>
+				<h3 style="margin-top: 25px" class="text-uppercase">Technical Skills</h3>
 				<hr/>
 				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Python, Bash, HTML, CSS, SQL</p>
 				<p><strong><span class="tech-skill">Technologies: </span></strong>NodeJS, Firebase Functions, Express.js, Mocha, Chai, jQuery, Spring Core, Hibernate, JUnit, GWT</p>
@@ -113,7 +113,7 @@
 				</article>
 
 				<br />
-				
+				<div class="pb"></div>
 				<article>
 
 					<h4>PBSC Urban Solutions</h4>
@@ -134,7 +134,7 @@
 				</article>
 
 				<br />
-				<div class="pb"></div>
+
 				<article>
 
 					<h4>Motorola Solutions Systems Polska Sp. z o.o.</h4>
@@ -167,7 +167,7 @@
 				</article>
 
 				<br class="hidden-print"/>
-				<div class="pb"></div>
+
 				<article>
 					<h4>SmallGIS Sp. z o.o.</h4>
 					<p>
