--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <title>Robert Koprowski</title>
-	
+
   <link href="./files/bootstrap.css" rel="stylesheet">
   <link href="./files/cv.css" rel="stylesheet">
 </head>
@@ -53,9 +53,9 @@
 				<h3 class="text-uppercase">Profile Summary</h2>
 				<hr />
 				<ul>
-					<li><p>Software Developer with 8 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
+					<li><p>Software Developer with 10 years of experience, mainly interested in web applications development, both front end and back end.</p></li>
 					<li><p>Deep knowledge of Java programming language and Java frameworks like Spring Core, Google Web Toolkit or Wicket.</p></li>
-					<li><p>5 years of full time experiance of JavaScript programming which includes ES6, firebase-functions, Node.js, jQuery, ReactJS</p></li>
+					<li><p>7 years of full time experiance of JavaScript programming which includes ES6, firebase-functions, Node.js, jQuery, ReactJS</p></li>
 					<li><p>Familiar with Object Oriented Programming concept and Design Patterns used in development process. Huge fan of agile methodologies like Scrum and Kanban.</p></li>
 					<li><p>Developing under Linux, Mac and Windows environments. Competent in Bash, Powershell and Python scripting.</p></li>
 					<li><p>Experienced with relational databases such as PostgresSQL, Oracle, HSQLDB and non-relational such as Redis, Cloud Firestore, Firebase Realtime Database.</p></li>
@@ -79,8 +79,8 @@
 			<section class="cv-section">
 				<h3 style="margin-top: 25px" class="text-uppercase">Technical Skills</h3>
 				<hr/>
-				<p><strong><span class="tech-skill">Programming Languages: </span></strong>Java, JavaScript, Python, Bash, HTML, CSS, SQL</p>
-				<p><strong><span class="tech-skill">Technologies: </span></strong>NodeJS, Firebase Functions, Express.js, Mocha, Chai, jQuery, Spring Core, Hibernate, JUnit, GWT</p>
+				<p><strong><span class="tech-skill">Programming Languages: </span></strong>TypeScript, JavaScript, Java, Bash, HTML, CSS, SQL</p>
+				<p><strong><span class="tech-skill">Technologies: </span></strong>NodeJS, NestJS, React, Firebase Functions, Express.js, Mocha, Chai, jQuery </p>
 				<p><strong><span class="tech-skill">Concepts: </span></strong>Object-Oriented Programming, Design Patterns, Agile Methodologies(Scrum, Kanban), RESTful Applications</p>
 				<p><strong><span class="tech-skill">Databases: </span></strong>Redis, Cloud Firestore, Firebase Realtime Database, Oracle, PostgresSQL, HSQLDB</p>
 				<p><strong><span class="tech-skill">Operating Systems: </span></strong>Linux, Mac, Windows</p>
@@ -95,9 +95,21 @@
 				<hr />
 				<article>
 
+					<h4>Bright Inventions</h4>
+					<p>
+						<small class="text-primary"><strong>Senior Fullstack Developer,</strong> May 2021 - now</small>
+					</p>
+					<p>Top custom software development company in Poland specialising in mobile & web apps, Blockchain and IoT.</p>
+
+					<p><strong>Technology Used: </strong>TypeScript, React, NestJS, Node.js, PostgreSQL, AWS, Git, GitHub, TeamCity, JIRA</p>
+				</article>
+				<br />
+
+				<article>
+
 					<h4>Schibsted Tech Polska</h4>
 					<p>
-						<small class="text-primary"><strong>Backend Developer,</strong> October 2019 - Now</small>
+						<small class="text-primary"><strong>Backend Developer,</strong> October 2019 - April 2021</small>
 					</p>
 					<p>Schibsted Tech Polska develops high quality software for news media, fin-tech and marketplaces industries.</p>
 					<p><strong>Responsibilities</strong></p>
@@ -113,7 +125,7 @@
 				</article>
 
 				<br />
-				<div class="pb"></div>
+
 				<article>
 
 					<h4>PBSC Urban Solutions</h4>
